--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
     </header>
 
-    <section class="section__container about_container" id="about">
+    <section class="section__container about__container" id="about">
         <div class="about__image">
             <img class="about__bg" src="images/dot-bg.png" alt="bg">
             <img src="images/about.png" alt="about">
@@ -370,7 +370,7 @@
         <div class="section__container footer__container">
             <div class="footer__col">
                 <div class="footer__logo">
-                    <a href="#"><img src="images/logo.png" alt="">Power</a>
+                    <a href="#"><img src="images/logo.png" alt="">Gold GYM</a>
                 </div>
                 <p>
                     Take the first step towards a healthier, stronger you with our
